salesforce/force-app/main/default/objects/Lead/fields/AI_Accepted__c.field-meta.xml
<CustomField>
    <fullName>AI_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Accepted</label>
    <type>Checkbox</type>
</CustomField>