salesforce/force-app/main/default/objects/Lead/fields/AI_Category__c.field-meta.xml
<CustomField>
    <fullName>AI_Category__c</fullName>
    <label>AI Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>