salesforce/force-app/main/default/objects/Lead/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <label>AI Confidence</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>