salesforce/force-app/main/default/objects/Lead/fields/AI_Reason__c.field-meta.xml
<CustomField>
    <fullName>AI_Reason__c</fullName>
    <label>AI Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>