salesforce/force-app/main/default/objects/Lead/fields/AI_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>AI_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Reviewed</label>
    <type>Checkbox</type>
</CustomField>