salesforce/force-app/main/default/objects/Lead/fields/Requested_Service__c.field-meta.xml
<CustomField>
    <fullName>Requested_Service__c</fullName>
    <label>Requested Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fisioterapia</fullName>
            </value>
            <value>
                <fullName>Terapia a domicilio</fullName>
            </value>
            <value>
                <fullName>Rehabilitación</fullName>
            </value>
            <value>
                <fullName>Información general</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>